--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Restore Closed Tab",
-  "description": "Restore Closed Tab",
+  "name": "Restorify - Restore Closed Tab",
+  "description": "Chrome Extension to restore your closed tabs in Google Chrome Browser",
   "version": "1.0",
   "background":{
     "scripts" : ["res/js/chromeBox.js","contextMenus.js"],
@@ -8,7 +8,7 @@
   },
   "browser_action": {
     "default_icon": "/res/images/logo.png",
-    "default_title": "Restore Closed Tab"
+    "default_title": "Restorify - Restore Closed Tab"
   },
   "icons": {
    "16": "res/images/logo.png",
@@ -16,7 +16,6 @@
    "120": "res/images/logo.png" 
  },
  "permissions": [
-  "tabs",
   "contextMenus",
   "sessions"
 ], 
